Fix background image on ios 7

--- a/kornell-gwt/src/main/webapp/skins/first/css/vitrine/vitrine.less
+++ b/kornell-gwt/src/main/webapp/skins/first/css/vitrine/vitrine.less
@@ -1,13 +1,16 @@
 @import "../utils/mixins";
 @import "../utils/colors";
 
+
+
 .VitrinePlace {	
 	background: url(/skins/first/bg.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-
+	height: 100%;
+	
 	.wrapper{
 		width: @wrapperWidth;
 	}
